[Home]

Summary:ASTERISK-23457: SQlite3: Realtime queue loading fails after PRAGMA query result
Reporter:Scott Griepentrog (sgriepentrog)Labels:
Date Opened:2014-03-10 16:47:42Date Closed:2017-02-20 15:44:10.000-0600
Priority:MinorRegression?
Status:Closed/CompleteComponents:Applications/app_queue Resources/res_config_sqlite3
Versions:SVN 11.2.0 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description:When loading queues and queue_members, the function realtime_sqlite3_execute_handle() issues sql command "PRAGMA table_info("queue_members") via sqlite3_exec(), and then fails due to a zero return value from sqlite3_changes(), which then causes it to presume the need to create the table and columns that already exist.

The error
{noformat}
res_config_sqlite3.c: Could not execute ')': near ")": syntax error
{noformat}
appears when this issue occurs.  The error is caused by attempting to create a list of columns that don't exist when they've already been passed to the add_column_name() callback issued by sqlite3_exec().
Comments:By: Friendly Automation (friendly-automation) 2017-02-20 15:44:11.256-0600

Change 4969 merged by zuul:
res_config_sqlite3: Properly create missing columns when necessary

[https://gerrit.asterisk.org/4969|https://gerrit.asterisk.org/4969]

By: Friendly Automation (friendly-automation) 2017-02-20 15:44:14.388-0600

Change 4970 merged by zuul:
res_config_sqlite3: Properly create missing columns when necessary

[https://gerrit.asterisk.org/4970|https://gerrit.asterisk.org/4970]

By: Friendly Automation (friendly-automation) 2017-02-20 15:44:17.482-0600

Change 4971 merged by zuul:
res_config_sqlite3: Properly create missing columns when necessary

[https://gerrit.asterisk.org/4971|https://gerrit.asterisk.org/4971]